[gd_scene load_steps=12 format=4 uid="uid://bln2yok6epjbf"]

[ext_resource type="Script" uid="uid://dpochmmrkk1pr" path="res://minigames/DodgeTheDrop/dodge_the_drop.gd" id="1_ukd48"]
[ext_resource type="Script" uid="uid://dpett0n2bdxsn" path="res://minigames/DodgeTheDrop/player.gd" id="2_ugcg6"]
[ext_resource type="Texture2D" uid="uid://ku0auqi24jgw" path="res://minigames/DodgeTheDrop/assets/pixil-frame-0.png" id="3_crrl4"]
[ext_resource type="PackedScene" uid="uid://dwrkep45jtuq8" path="res://minigames/DodgeTheDrop/Obstacle.tscn" id="4_icip1"]
[ext_resource type="Texture2D" uid="uid://b8t631odpeeal" path="res://minigames/DodgeTheDrop/assets/DarkRoad.png" id="5_ugcg6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x67ft"]
size = Vector2(16, 16)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1b7xq"]
bg_color = Color(0.066667, 0.066667, 0.105882, 0.854902)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.192157, 0.533333, 0.843137, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xx4tf"]
bg_color = Color(0.043137, 0.043137, 0.066667, 0.862745)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.192157, 0.533333, 0.843137, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kjkbm"]
bg_color = Color(0.043137, 0.043137, 0.066667, 0.87451)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.866667, 0.639216, 0.152941, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_crrl4"]
texture = ExtResource("5_ugcg6")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0

[sub_resource type="TileSet" id="TileSet_ukd48"]
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/1 = SubResource("TileSetAtlasSource_crrl4")

[node name="DodgeTheDrop" type="Node2D"]
script = ExtResource("1_ukd48")
obstacle_scene = ExtResource("4_icip1")

[node name="Obstacle" parent="." instance=ExtResource("4_icip1")]
collision_layer = 2

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(320, 640)
collision_mask = 2
script = ExtResource("2_ugcg6")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("3_crrl4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_x67ft")

[node name="UI" type="CanvasLayer" parent="."]

[node name="UIRoot" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScorePanel" type="PanelContainer" parent="UI/UIRoot"]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 284.0
offset_bottom = 104.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1b7xq")

[node name="ScoreLabel" type="Label" parent="UI/UIRoot/ScorePanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.866667, 0.952941, 1, 1)
theme_override_font_sizes/font_size = 34
text = "Puntuación: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartPanel" type="PanelContainer" parent="UI/UIRoot"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -270.0
offset_top = -188.0
offset_right = 270.0
offset_bottom = -44.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xx4tf")

[node name="StartLabel" type="Label" parent="UI/UIRoot/StartPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.866667, 0.952941, 1, 1)
theme_override_font_sizes/font_size = 28
text = "¡Usa Q o E ,  y esquiva los patinetes!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="ResultPanel" type="PanelContainer" parent="UI/UIRoot"]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -110.0
offset_right = 300.0
offset_bottom = 110.0
theme_override_styles/panel = SubResource("StyleBoxFlat_kjkbm")

[node name="ResultLabel" type="Label" parent="UI/UIRoot/ResultPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.909804, 0.678431, 1)
theme_override_font_sizes/font_size = 36
text = "¡Superaste la tormenta!
Puntuación final: 0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AABGAAAAAQACAAAAAABGAAEAAQAFAAAAAABGAAIAAQACAAAAAABGAAMAAQACAAAAAABGAAQAAQADAAAAAABGAAUAAQABAAAAAABGAAYAAQAFAAAAAABGAAcAAQADAAAAAABGAAgAAQAAAAAAAABGAAkAAQAFAAAAAABGAAoAAQADAAAAAABGAAsAAQAFAAAAAABGAAwAAQAAAAAAAABGAA0AAQAFAAAAAABGAA4AAQAFAAAAAABGAA8AAQACAAAAAABGABAAAQACAAAAAABGABEAAQAEAAAAAABGABIAAQAFAAAAAABGABMAAQAAAAAAAABGABQAAQAAAAAAAABGABUAAQADAAAAAABGABYAAQAFAAAAAABGABcAAQACAAAAAABGABgAAQADAAAAAABGABkAAQADAAAAAABGABoAAQAEAAAAAABGABsAAQADAAAAAABGABwAAQADAAAAAABGAB0AAQAFAAAAAABGAB4AAQACAAAAAABGAB8AAQADAAAAAABGACAAAQAEAAAAAABGACEAAQACAAAAAABGACIAAQABAAAAAABGACMAAQACAAAAAABGACQAAQABAAAAAABGACUAAQAFAAAAAABGACYAAQADAAAAAABGACcAAQAFAAAAAABGACgAAQAFAAAAAABHAAAAAQACAAAAAABHAAEAAQAFAAAAAABHAAIAAQAFAAAAAABHAAMAAQAFAAAAAABHAAQAAQAEAAAAAABHAAUAAQAFAAAAAABHAAYAAQACAAAAAABHAAcAAQAEAAAAAABHAAgAAQACAAAAAABHAAkAAQABAAAAAABHAAoAAQAFAAAAAABHAAsAAQACAAAAAABHAAwAAQACAAAAAABHAA0AAQACAAAAAABHAA4AAQAFAAAAAABHAA8AAQAAAAAAAABHABAAAQAFAAAAAABHABEAAQAFAAAAAABHABIAAQADAAAAAABHABMAAQAFAAAAAABHABQAAQAFAAAAAABHABUAAQAAAAAAAABHABYAAQACAAAAAABHABcAAQADAAAAAABHABgAAQADAAAAAABHABkAAQADAAAAAABHABoAAQABAAAAAABHABsAAQADAAAAAABHABwAAQAFAAAAAABHAB0AAQADAAAAAABHAB4AAQADAAAAAABHACAAAQAFAAAAAABHACEAAQABAAAAAABHACIAAQAEAAAAAABHACMAAQACAAAAAABHACQAAQAFAAAAAABHACUAAQABAAAAAABHACYAAQAAAAAAAABHACcAAQADAAAAAABHACgAAQAEAAAAAABFAAsAAQAJAAEAAABFAA0AAQAAAAIAAABFABYAAQACAAEAAABFABsAAQACAAEAAABFAB8AAQAIAAUAAABFACMAAQACAAEAAABFAAEAAQAAAAIAAABFAAAAAQAFAAQAAABFAAIAAQADAAQAAABFAAMAAQAFAAQAAABFAAQAAQADAAQAAABFAAUAAQAHAAUAAABFAAYAAQADAAQAAABFAAcAAQAIAAUAAABFAAgAAQACAAMAAABFAAkAAQAFAAQAAABFAAoAAQACAAEAAABFAAwAAQAAAAIAAABFAA4AAQAIAAUAAABFAA8AAQADAAQAAABFABAAAQACAAEAAABFABEAAQACAAEAAABFABIAAQAHAAUAAABFABMAAQAJAAEAAABFABQAAQADAAQAAABFABUAAQADAAQAAABFABcAAQADAAMAAABFABgAAQAJAAEAAABFABkAAQAFAAQAAABFABoAAQAFAAQAAABFABwAAQAIAAUAAABFAB0AAQAJAAEAAABFAB4AAQAIAAUAAABFACAAAQAIAAUAAABFACEAAQADAAQAAABFACIAAQAHAAUAAABFACQAAQAAAAIAAABFACUAAQACAAMAAABFACYAAQAHAAUAAABFACcAAQAFAAQAAABFACgAAQAJAAEAAABEAAAAAQAFAAUAAABEAAEAAQADAAEAAABEAAIAAQADAAEAAABEAAMAAQAGAAUAAABEAAQAAQAFAAUAAABEAAUAAQAFAAUAAABEAAYAAQAGAAUAAABEAAcAAQAGAAUAAABEAAgAAQAAAAMAAABEAAkAAQAGAAUAAABEAAoAAQAFAAUAAABEAAsAAQADAAEAAABEAAwAAQAGAAUAAABEAA0AAQAGAAUAAABEAA4AAQADAAEAAABEAA8AAQADAAEAAABEABAAAQAGAAUAAABEABEAAQADAAEAAABEABIAAQADAAEAAABEABMAAQAGAAUAAABEABQAAQAJAAUAAABEABUAAQADAAEAAABEABYAAQAFAAUAAABEABcAAQAAAAMAAABEABgAAQADAAEAAABEABkAAQAFAAUAAABEABoAAQAGAAUAAABEABsAAQADAAEAAABEABwAAQAFAAUAAABEAB0AAQAGAAUAAABEAB4AAQADAAEAAABEAB8AAQAFAAUAAABEACAAAQAGAAUAAABEACEAAQADAAEAAABEACIAAQAFAAUAAABEACMAAQAFAAUAAABEACQAAQADAAEAAABEACUAAQAAAAMAAABEACYAAQAFAAUAAABEACcAAQAGAAUAAABEACgAAQADAAEAAABDAAUAAQACAAEAAABDAAYAAQAJAAUAAABDAAcAAQAHAAUAAABDAAgAAQAAAAMAAABDAAkAAQAAAAIAAABDAAoAAQACAAEAAABDAAsAAQAHAAUAAABDAAwAAQACAAEAAABDAA0AAQAHAAUAAABDAA4AAQAAAAIAAABDAA8AAQACAAEAAABDABAAAQAAAAIAAABDABEAAQAIAAUAAABDABIAAQAAAAIAAABDABMAAQAHAAUAAABDABQAAQACAAEAAABDABUAAQAIAAUAAABDABYAAQAHAAUAAABDABcAAQAAAAMAAABDABgAAQACAAEAAABDABkAAQACAAEAAABDABoAAQAHAAUAAABDABsAAQACAAEAAABDABwAAQACAAEAAABDAB0AAQACAAEAAABDAB4AAQAHAAUAAABDAB8AAQAIAAUAAABDACAAAQAJAAUAAABDACEAAQAAAAIAAABDACIAAQAAAAIAAABDACMAAQAHAAUAAABDACQAAQACAAEAAABDACUAAQAAAAMAAABDACYAAQACAAEAAABDACcAAQAIAAUAAABDACgAAQACAAEAAABDAAAAAQAIAAUAAABDAAEAAQAHAAUAAABDAAIAAQAHAAUAAABDAAMAAQAIAAUAAABDAAQAAQAHAAUAAABCAAAAAQAFAAUAAABCAAEAAQADAAEAAABCAAIAAQAFAAUAAABCAAMAAQAEAAQAAABCAAQAAQAFAAUAAABCAAUAAQAGAAQAAABCAAYAAQAEAAQAAABCAAcAAQAFAAUAAABCAAgAAQAEAAMAAABCAAkAAQAGAAUAAABCAAoAAQADAAEAAABCAAsAAQAGAAUAAABCAAwAAQAFAAUAAABCAA0AAQAEAAQAAABCAA4AAQAGAAUAAABCAA8AAQAEAAQAAABCABAAAQAGAAUAAABCABEAAQAGAAQAAABCABIAAQAFAAUAAABCABMAAQAEAAQAAABCABQAAQAFAAUAAABCABUAAQAEAAQAAABCABYAAQAIAAUAAABCABcAAQAGAAMAAABCABgAAQADAAEAAABCABkAAQAFAAUAAABCABoAAQAGAAUAAABCABsAAQADAAEAAABCABwAAQAEAAQAAABCAB0AAQADAAEAAABCAB4AAQAEAAQAAABCAB8AAQAEAAQAAABCACAAAQADAAEAAABCACEAAQAGAAUAAABCACIAAQADAAEAAABCACMAAQAGAAQAAABCACQAAQAIAAUAAABCACUAAQAEAAMAAABCACgAAQAIAAUAAABHAB8AAQABAAAAAABCACYAAQAHAAQAAABCACcAAQAIAAQAAAA=")
tile_set = SubResource("TileSet_ukd48")
